[tool.poetry]
name = "health_blockchain"
version = "0.1.0"
description = ""
authors = ["NightMachinery <rudiwillalwaysloveyou@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
icecream = "^2.1.1"
cryptography = "^38.0.1"

[tool.poetry.dev-dependencies]
ipython = "^8.5.0"

[build-system]
requires = ["setuptools", "poetry_core>=1.0"]
build-backend = "poetry.core.masonry.api"
